# pymui-pr

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: memory-leak-detection.yml
doc/: architecture.md  development.md
doc/SDL2/: SDL_config.h
microui/: CMakeLists.txt  microui.c  microui.h
microui/sdl/: CMakeLists.txt
microui/sdl/demo/: CMakeLists.txt
scripts/: benchmark.py  memory_leak_test.py  remove_trailing_whitespace.py
src/: CMakeLists.txt  alt_demo.py  demo.py  pymui_sdl_demo.py  test_sdl_demo_structure.py
src/pymui/: __init__.py  pymui.pxd  pymui.pyx
tests/: conftest.py  context_manager_demo.py  debug_demo.py  pymui_sdl_demo.py  pymui_sdl_demo_debug.py  sdl_demo.py  test_complex_ui.py  test_context_manager.py  test_events_debug.py  test_interactions.py  test_memory_safety.py  test_microui_debug.py  test_minimal.py  test_mouse_debug.py  test_performance.py  test_property_based.py  test_property_based_safe.py  test_property_minimal.py  test_pymui.py  test_pymui_simple.py  test_sdl_events.py  test_simple_button.py  test_text_fix.py  test_text_input.py  test_text_input_focus.py  test_textbox_class.py  test_ui_events.py  test_window_context_manager.py  window_context_demo.py
