[project]
name = "pymui"
version = "0.1.0"
description = "A cython wrapper for microui"
readme = "README.md"
authors = [
    { name = "rxi", email = "rxi@rxi.github.io" },
]
requires-python = ">=3.13"
dependencies = []

[tool.scikit-build]
ninja.make-fallback = false

[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core",
    "cython"
]
