[project]
name = "pymui"
version = "0.1.0"
description = "A cython wrapper for microui"
readme = "README.md"
authors = [{ name = "rxi", email = "rxi@rxi.github.io" }]
requires-python = ">=3.13"
dependencies = [
    "pysdl2>=0.9.17",
    #"pysdl2-dll>=2.32.0",
]

[tool.scikit-build]
ninja.make-fallback = false

[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core", "cython"]

[dependency-groups]
dev = ["pytest>=8.4.1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
